[metadata]
name = ruc
author = Jose Vasconcellos - apple314159
summary = RUC Panama
license = Apache License v2.0
description-file = README.md
requires-python = >=2.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
[files]
packages =
    ruc